# national_final_AI_hackathon

./: readme.md
crud_endpoint_final hackathon/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
final_hackathon_sdk/: README.md  agent_logs_autonomous.jsonl  agent_logs_autonomous.txt  agents_file.py  cached_messages.json  configuration.py  dashboard_cache.py  helper_tools.py  main.py  mcp_health_lifespan.py  message_handler.py  pyproject.toml  state_manager.py  trace_file.py
hackathon_final_frontend/src/app/: page.tsx
hackathon_final_frontend/src/app/Components/: AuthGuard.tsx  LanguageSwitcher.tsx  Sidebar.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/add-product/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/logs/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/marketing-campaigns/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/profit-loss-report/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/purchase-report/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/sales-report/: page.tsx
hackathon_final_frontend/src/app/[locale]/dashboard/view-products/: page.tsx
hackathon_final_frontend/src/app/[locale]/login/: page.tsx
hackathon_final_frontend/src/app/locales/en/: common.json
hackathon_final_frontend/src/app/locales/ur/: common.json
hackathon_finale_mcp/: README.md  pyproject.toml  requirements.txt  server.py
