[project]
name = "crud-endpoint-final-hackathon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "fastapi>=0.119.1",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "uvicorn>=0.38.0",
]
