[project]
name = "final-hackathon-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.11.0",
    "dotenv>=0.9.9",
    "fastapi>=0.121.3",
    "mcp>=1.22.0",
    "openai-agents>=0.6.1",
    "pydantic>=2.12.4",
    "python-dateutil>=2.9.0.post0",
    "twilio>=9.8.7",
    "uvicorn>=0.38.0",
]
